--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "GreatOutDoor": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "GreatOutDoor"
+    }
+  },
+  "defaultProject": "GreatOutDoor",
+  "cli": {
+    "analytics": "65444d8f-4656-44fb-bc6b-33cb1c3ebde3"
+  }
 }
